# runmanager

./: .gitignore  LICENSE.txt  README.md  __init__.py  __main__.py  batch_compiler.py  bug.glade  bug.py  fileops.py  functions.py  global.glade  globals_diff.bat  globals_diff.py  group.ui  grouplistentry.glade  grouptab.glade  interface.glade  interface2.glade  main.pyw  main.ui  parameter_space_overview.glade  pyproject.toml  remote.py  runmanager.lnk  runmanager.py  runmanager.pyw  setup.cfg  setup.py  submitjob.py
.github/workflows/: release-vars.sh  release.yml
docs/: using_runmanager.docx
docs/source/: conf.py  index.rst  introduction.rst  usage.rst
docs/source/api/: index.rst
runmanager/: __init__.py  __main__.py  __version__.py  batch_compiler.py  batch_compiler_labscript.py  desktop-app.json  functions.py  globals_diff.py  main.ui  remote.py
