[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}


[project]
name = "runmanager"
description = "Graphical control of parameterised experiments composed in labscript"
authors = [
    {name = "The labscript suite community", email = "labscriptsuite@googlegroups.com"},
]
keywords = ["experiment control", "automation"]
license = {file = 'LICENSE.txt'}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = [
    "desktop-app>=0.1.2",
    "labscript>=3.0.0",
    "labscript_utils>=3.3.0",
    "pandas>=0.13",
    "qtutils>=2.2.2",
    "matplotlib",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "http://labscriptsuite.org/"
Documentation = "https://docs.labscriptsuite.org/"
Repository = "https://github.com/labscript-suite/runmanager/"
Downloads = "https://github.com/labscript-suite/runmanager/releases/"
Tracker = "https://github.com/labscript-suite/runmanager/issues/"

[project.optional-dependencies]
docs = [
    "PyQt5",
    "Sphinx==8.2.3",
    "sphinx-rtd-theme==3.0.2",
    "myst_parser==4.0.1",
]

[project.scripts]
runmanager = "desktop_app:entry_point"

[project.gui-scripts]
runmanager-gui = "desktop_app:entry_point"
