[metadata]
name = runmanager
description = Graphical control of parameterised experiments composed in labscript
long_description = file: README.md
long_description_content_type = text/markdown
author = The labscript suite community
author_email = labscriptsuite@googlegroups.com
url = http://labscriptsuite.org
project_urls = 
    Source Code=https://github.com/labscript-suite/runmanager
    Download=https://github.com/labscript-suite/runmanager/releases
    Tracker=https://github.com/labscript-suite/runmanager/issues
keywords = experiment control automation
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
  desktop-app>=0.1.2
  labscript
  labscript_utils>=2.12.5
  pandas>=0.13
  qtutils>=2.2.2
setup_requires =
  setuptools_scm

[options.entry_points]
console_scripts =
  runmanager = desktop_app:entry_point
gui_scripts = 
  runmanager-gui = desktop_app:entry_point

[options.extras_require]
pyqt = PyQt5

[dist_conda]
pythons = 3.6, 3.7, 3.8
