[metadata]
name = runmanager
description = Graphical control of parameterised experiments composed in labscript
long_description = file: README.md
long_description_content_type = text/markdown
author = The labscript suite community
author_email = labscriptsuite@googlegroups.com
url = http://labscriptsuite.org
project_urls = 
    Source Code=https://github.com/labscript-suite/runmanager
    Download=https://github.com/labscript-suite/runmanager/releases
    Tracker=https://github.com/labscript-suite/runmanager/issues
keywords = experiment control automation
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
  desktop-app>=0.1.2
  importlib_metadata
  labscript>=3.0.0
  labscript_utils>=3.3.0
  pandas>=0.13
  qtutils>=2.2.2
  matplotlib

[options.entry_points]
console_scripts =
  runmanager = desktop_app:entry_point
gui_scripts = 
  runmanager-gui = desktop_app:entry_point

[options.extras_require]
pyqt = PyQt5
docs = 
  PyQt5
  Sphinx==7.2.6
  sphinx-rtd-theme==2.0.0
  myst_parser==2.0.0
